Clases de ANTLR

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/Proyecto1BasesDatos.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.antlr-4.4-complete.jar=C:\\Users\\pablo\\Downloads\\antlr-4.4-complete.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.antlr-4.4-complete.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
